# AudioFramework

./: .gitignore
LibTestDemo/LibTestDemo/: AppDelegate.h  AppDelegate.mm  ViewController.h  ViewController.mm  YCMusicPlayer.mm  main.m
LibTestDemo/LibTestDemo.xcodeproj/: project.pbxproj
LibTestDemo/LibTestDemo.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
LibTestDemo/LibTestDemo/Base.lproj/: Main.storyboard
YChao-NewPlayer/: .gitignore
YChao-NewPlayer/media/player/: Android.mk  Android.mk.bak  TTMediaPlayer_jni.cpp
YChao-NewPlayer/osal/src/: TTBitReader.cpp  TTCacheBuffer.cpp  TTCritical.cpp  TTDNSCache.cpp  TTDirEnum.cpp  TTDllLoader.cpp  TTHttpCacheFile.cpp  TTHttpReaderProxy.cpp  TTIOClient.cpp  TTUtils.cpp  TThread.cpp  dll_main.cpp
YChao-NewPlayer/win32libs/: PlayerTest.ilk  vc90.idb
YCiOSPlayerLib/YCiOSPlayerLib.xcodeproj/: project.pbxproj
YCiOSPlayerLib/YCiOSPlayerLib.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Yinchao-NewPlayer/: .gitignore  codecheck.sh  cpplint.py
Yinchao-NewPlayer/AndroidSample/Player/: AndroidManifest.xml
Yinchao-NewPlayer/AndroidSample/PlayerDemo/: AndroidManifest.xml  project.properties
Yinchao-NewPlayer/cppunit/examples/: examples.sln
Yinchao-NewPlayer/jni/: Android.mk  Android.mk.bak  Application.mk
Yinchao-NewPlayer/media/codec/: Android.mk  codec.mk  codec.mk.bak  codec_arm.mk  codec_arm.mk.bak
Yinchao-NewPlayer/media/player/: TTMediaPlayer_jni.cpp  debug_signatures_md5.h  signatures_md5.h
Yinchao-NewPlayer/osal/: Android.mk
Yinchao-NewPlayer/osal/inc/: TTAudioSink.h  TTJniEnvUtil.h  TTLog.h  TTMacrodef.h
Yinchao-NewPlayer/osal/src/: TTAvUtils.cpp  TTBaseDataReader.cpp  TTBufferReader.cpp  TTBufferReaderProxy.cpp  TTCondition.cpp  TTEventThread.cpp  TTFileReader.cpp  TTHttpClient.cpp  TTHttpReader.cpp  TTJniEnvUtil.cpp  TTNetWorkConfig.cpp  TTSemaphore.cpp  TTSleep.cpp  TTSysTime.cpp  TTUrlParser.cpp
Yinchao-NewPlayer/win32libs/: PlayerTest.ilk  PlayerTest.res  mt.dep
Yinchao-PcmPlayer/Android/: Android.mk
Yinchao-PcmPlayer/common/: STDataReaderSelector.cpp  STDataReaderSelector.h  ulu_OSFunc.cpp
Yinchao-PcmPlayer/inc/: IAYMediaPlayer.h
Yinchao-PcmPlayer/jni/: Android.mk  Android.mk.bak  Application.mk  Application.mk.bak  TTPcmPlayer_jni.cpp  com_yinchao_media_recoder_YCPcmPlayer.h
Yinchao-PcmPlayer/pcmPlayer/: pcmPlayer.sln
Yinchao-PcmPlayer/pcmPlayer/pcmPlayer/: pcmPlayer.vcxproj  pcmPlayer.vcxproj.filters
Yinchao-PcmPlayer/src/: AYMediaPlayer.cpp  AYMediaPlayer.h  AndriodAudioRender.cpp  CIOSAudioRender.h  CIOSAudioRender.mm
Yinchao-PcmPlayer/test/: main.cpp
YinchaoMusic/: .gitignore  build.gradle  gradle.properties  settings.gradle
YinchaoMusic-Independent/: .gitignore  README.md
YinchaoMusic-Independent/Android/playback/: .project  build.gradle  local.properties
YinchaoMusic-Independent/Android/test/: AndroidManifest.xml  build.gradle  project.properties
YinchaoMusic-Independent/Codecs/STReverb/: fv3_config.h
YinchaoMusic-Independent/Common/inc/: STDataReaderItf.h  STDataReaderSelector.h  STFileReader.h  STHttpCacheFile.h  (+8 more)
YinchaoMusic-Independent/Wins/: PlayBack.sln
YinchaoMusic-Independent/vs2008_prg/: denoise.sln
YinchaoMusic-Independent/vs2008_prg/freeverb/freeverb/: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.in  fv3_config.h  fv3_config.h.in
YinchaoMusic-Independent/vs2008_prg/freeverb/freeverb/audacious/: Makefile.am  Makefile.in
YinchaoMusic-Independent/vs2008_prg/freeverb/freeverb/bmp/: Makefile.am  Makefile.in
YinchaoMusic-Independent/vs2008_prg/freeverb/freeverb/doc/: Makefile.am  Makefile.in
YinchaoMusic-Independent/vs2008_prg/freeverb/freeverb/double/: Makefile.am  Makefile.in
YinchaoMusic-Independent/vs2008_prg/freeverb/freeverb/float/: Makefile.am  Makefile.in
YinchaoMusic-Independent/vs2008_prg/freeverb/freeverb/freeverb/: Makefile.am  Makefile.in  allpass.cpp  allpass_t.hpp  biquad.cpp  biquad_t.hpp  blockDelay.cpp  comb.cpp  comb.hpp  comb_t.hpp  compmodel_t.hpp  delay.cpp  delay_t.hpp  efilter.hpp  fir3bandsplit.cpp  fir3bandsplit_t.hpp  firfilter.hpp  firwindow.cpp  firwindow.hpp  firwindow_t.hpp  frag.cpp  frag_t.hpp  irbase.cpp  irbase.hpp  irbase_t.hpp  irmodel.cpp  irmodel.hpp  irmodel2.cpp  irmodel2.hpp  irmodel2zl.cpp  irmodel2zl.hpp  irmodel3.cpp  irmodel3.hpp  irmodel3_t.hpp  irmodels.cpp  irmodels.hpp  limitmodel.cpp  limitmodel_t.hpp  nrev.cpp  nrev_t.hpp  (+25 more)
YinchaoMusic-Independent/vs2008_prg/freeverb/freeverb/ldouble/: Makefile.am  Makefile.in
YinchaoMusic-Independent/vs2008_prg/freeverb/freeverb/libgdither/: Makefile.am  Makefile.in
YinchaoMusic-Independent/vs2008_prg/freeverb/freeverb/libsamplerate2/: Makefile.am  Makefile.in
YinchaoMusic-Independent/vs2008_prg/freeverb/freeverb/m4/: Makefile.in
YinchaoMusic-Independent/vs2008_prg/freeverb/freeverb/patch/: Makefile.am  Makefile.in  bmp-0.9.7.1-effect-lock.patch
YinchaoMusic-Independent/vs2008_prg/freeverb/freeverb/samples/: CArg.cpp  CArg.hpp  Makefile.am  Makefile.in  benchmark3.cpp  impulser.cpp  impulser_jack.cpp  rateconv.cpp
YinchaoMusic-Independent/vs2008_prg/freeverb/freeverb/samples/IR/: LargeCave.pk  Makefile.in  iR_cathedral.pk
YinchaoMusic-Independent/vs2008_prg/freeverb/freeverb/xmms/: CFileLoader.hpp  CFileLoader_t.hpp  Makefile.am  Makefile.in  compressor.cpp  freeverb3.cpp  impulser2.cpp  libxmmsplugin.hpp  revmodel.cpp  stenh.cpp  strev.cpp  wave.xpm  xmms_defs.h
YinchaoMusic/LameLibraries/: build.gradle  maven.properties
YinchaoMusic/RecoderDemo/: build.gradle
YinchaoMusic/config/: maven.gradle
YinchaoMusic/yinchao-mediaplayer/: build.gradle
YinchaoMusic/yinchao-player/: build.gradle
YinchaoMusics/: .gitignore  gradle.properties  settings.gradle
YinchaoMusics/yinchao-player/: build.gradle  gradle.properties
YinchaoMusics/yinchao-recorder/: .gitignore  build.gradle  proguard-rules.pro
YinchaoMusics/yinchao-test/: build.gradle
iOSYinchaoPlayer/Untitled.xcworkspace/: contents.xcworkspacedata
iOSYinchaoPlayer/YCPlayer/: YCPlayer.h
music-test/app/: build.gradle
(+884 files in other folders)
